src/test/resources/semantic/reject/equalCompareArrays.ul
void main() {
}

void foo() {
    boolean result;
    boolean[2] array1;
    boolean[2] array2;

    result = array1 == array2;
}
